crates/parser/tests/snapshots/statements/valid/0044@5.snap
---
source: crates/parser/tests/statement_parser_test.rs
description: "\nCREATE RECURSIVE VIEW public.nums_1_100 (n) AS VALUES (1) UNION ALL SELECT n+1 FROM nums_1_100 WHERE n < 100;"
---
Parse {
    cst: SourceFile@0..109
      Newline@0..1 "\n"
      Create@1..7 "CREATE"
      Whitespace@7..8 " "
      Recursive@8..17 "RECURSIVE"
      Whitespace@17..18 " "
      View@18..22 "VIEW"
      Whitespace@22..23 " "
      Ident@23..29 "public"
      Ascii46@29..30 "."
      Ident@30..40 "nums_1_100"
      Whitespace@40..41 " "
      Ascii40@41..42 "("
      Ident@42..43 "n"
      Ascii41@43..44 ")"
      Whitespace@44..45 " "
      As@45..47 "AS"
      Whitespace@47..48 " "
      Values@48..54 "VALUES"
      Whitespace@54..55 " "
      Ascii40@55..56 "("
      Iconst@56..57 "1"
      Ascii41@57..58 ")"
      Whitespace@58..59 " "
      Union@59..64 "UNION"
      Whitespace@64..65 " "
      All@65..68 "ALL"
      SelectStmt@68..109
        Select@68..74 "SELECT"
        Whitespace@74..75 " "
        ResTarget@75..78
          AExpr@75..78
            ColumnRef@75..76
              Ident@75..76 "n"
            Ascii43@76..77 "+"
            AConst@77..78
              Iconst@77..78 "1"
        Whitespace@78..79 " "
        From@79..83 "FROM"
        Whitespace@83..84 " "
        RangeVar@84..94
          Ident@84..94 "nums_1_100"
        Whitespace@94..95 " "
        Where@95..100 "WHERE"
        Whitespace@100..101 " "
        AExpr@101..108
          ColumnRef@101..102
            Ident@101..102 "n"
          Whitespace@102..103 " "
          Ascii60@103..104 "<"
          Whitespace@104..105 " "
          AConst@105..108
            Iconst@105..108 "100"
        Ascii59@108..109 ";"
    ,
    errors: [
        SyntaxError(
            "Expected Ascii59, found Whitespace",
            68..68,
        ),
        SyntaxError(
            "Invalid statement: syntax error at end of input",
            1..26,
        ),
    ],
    stmts: [
        RawStmt {
            stmt: SelectStmt(
                SelectStmt {
                    distinct_clause: [],
                    into_clause: None,
                    target_list: [
                        Node {
                            node: Some(
                                ResTarget(
                                    ResTarget {
                                        name: "",
                                        indirection: [],
                                        val: Some(
                                            Node {
                                                node: Some(
                                                    AExpr(
                                                        AExpr {
                                                            kind: AexprOp,
                                                            name: [
                                                                Node {
                                                                    node: Some(
                                                                        String(
                                                                            String {
                                                                                sval: "+",
                                                                            },
                                                                        ),
                                                                    ),
                                                                },
                                                            ],
                                                            lexpr: Some(
                                                                Node {
                                                                    node: Some(
                                                                        ColumnRef(
                                                                            ColumnRef {
                                                                                fields: [
                                                                                    Node {
                                                                                        node: Some(
                                                                                            String(
                                                                                                String {
                                                                                                    sval: "n",
                                                                                                },
                                                                                            ),
                                                                                        ),
                                                                                    },
                                                                                ],
                                                                                location: 7,
                                                                            },
                                                                        ),
                                                                    ),
                                                                },
                                                            ),
                                                            rexpr: Some(
                                                                Node {
                                                                    node: Some(
                                                                        AConst(
                                                                            AConst {
                                                                                isnull: false,
                                                                                location: 9,
                                                                                val: Some(
                                                                                    Ival(
                                                                                        Integer {
                                                                                            ival: 1,
                                                                                        },
                                                                                    ),
                                                                                ),
                                                                            },
                                                                        ),
                                                                    ),
                                                                },
                                                            ),
                                                            location: 8,
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                        location: 7,
                                    },
                                ),
                            ),
                        },
                    ],
                    from_clause: [
                        Node {
                            node: Some(
                                RangeVar(
                                    RangeVar {
                                        catalogname: "",
                                        schemaname: "",
                                        relname: "nums_1_100",
                                        inh: true,
                                        relpersistence: "p",
                                        alias: None,
                                        location: 16,
                                    },
                                ),
                            ),
                        },
                    ],
                    where_clause: Some(
                        Node {
                            node: Some(
                                AExpr(
                                    AExpr {
                                        kind: AexprOp,
                                        name: [
                                            Node {
                                                node: Some(
                                                    String(
                                                        String {
                                                            sval: "<",
                                                        },
                                                    ),
                                                ),
                                            },
                                        ],
                                        lexpr: Some(
                                            Node {
                                                node: Some(
                                                    ColumnRef(
                                                        ColumnRef {
                                                            fields: [
                                                                Node {
                                                                    node: Some(
                                                                        String(
                                                                            String {
                                                                                sval: "n",
                                                                            },
                                                                        ),
                                                                    ),
                                                                },
                                                            ],
                                                            location: 33,
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                        rexpr: Some(
                                            Node {
                                                node: Some(
                                                    AConst(
                                                        AConst {
                                                            isnull: false,
                                                            location: 37,
                                                            val: Some(
                                                                Ival(
                                                                    Integer {
                                                                        ival: 100,
                                                                    },
                                                                ),
                                                            ),
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                        location: 35,
                                    },
                                ),
                            ),
                        },
                    ),
                    group_clause: [],
                    group_distinct: false,
                    having_clause: None,
                    window_clause: [],
                    values_lists: [],
                    sort_clause: [],
                    limit_offset: None,
                    limit_count: None,
                    limit_option: Default,
                    locking_clause: [],
                    with_clause: None,
                    op: SetopNone,
                    all: false,
                    larg: None,
                    rarg: None,
                },
            ),
            range: 68..109,
        },
    ],
}
