crates/parser/tests/snapshots/statements/valid/0046@5.snap
---
source: crates/parser/tests/statement_parser_test.rs
description: CREATE TYPE type1 AS RANGE (subtype = int4);
---
Parse {
    cst: SourceFile@0..44
      CreateRangeStmt@0..44
        Create@0..6 "CREATE"
        Whitespace@6..7 " "
        TypeP@7..11 "TYPE"
        Whitespace@11..12 " "
        Ident@12..17 "type1"
        Whitespace@17..18 " "
        As@18..20 "AS"
        Whitespace@20..21 " "
        Range@21..26 "RANGE"
        Whitespace@26..27 " "
        Ascii40@27..28 "("
        DefElem@28..42
          Ident@28..35 "subtype"
          Whitespace@35..36 " "
          Ascii61@36..37 "="
          Whitespace@37..38 " "
          TypeName@38..42
            Ident@38..42 "int4"
        Ascii41@42..43 ")"
        Ascii59@43..44 ";"
    ,
    errors: [],
    stmts: [
        RawStmt {
            stmt: CreateRangeStmt(
                CreateRangeStmt {
                    type_name: [
                        Node {
                            node: Some(
                                String(
                                    String {
                                        sval: "type1",
                                    },
                                ),
                            ),
                        },
                    ],
                    params: [
                        Node {
                            node: Some(
                                DefElem(
                                    DefElem {
                                        defnamespace: "",
                                        defname: "subtype",
                                        arg: Some(
                                            Node {
                                                node: Some(
                                                    TypeName(
                                                        TypeName {
                                                            names: [
                                                                Node {
                                                                    node: Some(
                                                                        String(
                                                                            String {
                                                                                sval: "int4",
                                                                            },
                                                                        ),
                                                                    ),
                                                                },
                                                            ],
                                                            type_oid: 0,
                                                            setof: false,
                                                            pct_type: false,
                                                            typmods: [],
                                                            typemod: -1,
                                                            array_bounds: [],
                                                            location: 38,
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                        defaction: DefelemUnspec,
                                        location: 28,
                                    },
                                ),
                            ),
                        },
                    ],
                },
            ),
            range: 0..43,
        },
    ],
}
